# cafes

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.rst  environment.yml
cafes/: cafes.hpp
cafes/algorithm/: iterate.hpp
cafes/fem/: assembling.hpp  assembling_old  bc.hpp  matElem.hpp  matrixFree.hpp  mesh.hpp  operator.hpp  quadrature.hpp  rhs.hpp
cafes/io/: hdf5.hpp  vtk.hpp
cafes/particle/: forces_torques.hpp  particle.hpp
cafes/particle/geometry/: box.hpp  circle.hpp  cross_product.hpp  linspace.hpp  position.hpp  quaternion.hpp  sphere.hpp  super_ellipsoid.hpp  triangulation.hpp  uniform_sampling.hpp  vector.hpp
cafes/particle/geometry/tests/: CMakeLists.txt  box.cpp
cafes/particle/physics/: force.hpp  velocity.hpp
cafes/particle/singularity/: PairSingInfo.cpp  PairSingManager.cpp  UandPNormal.hpp  UandPTang.hpp  add_singularity.hpp  forcesManager.cpp  singularity.hpp  truncation.hpp
cafes/petsc/: vec.hpp
cafes/posttraitement/: interpolation.hpp
cafes/problem/: context.hpp  dton.hpp  laplacian.hpp  matMult.hpp  ntod.hpp  options.hpp  particle_operator.hpp  problem.hpp  sem.hpp  stokes.hpp
cmake/: FindPETSc.cmake  run_test.cmake
demos/: CMakeLists.txt
demos/dton/2D/: script_two_part.sh  two_part.cpp
demos/dton/2D/Convergence/: convergence.sh  two_part.cpp
demos/dton/2D/Convergence/opposite_velocities/: convergence.sh  reference.sh  two_part.cpp  two_part_ana.cpp  two_part_opposite_velocities_reference.cpp
demos/dton/2D/Convergence/same_velocities/: convergence.sh  reference.sh  two_part_same_velocities.cpp  two_part_same_velocities_reference.cpp
demos/sem/: script_sem.sh  sem.cpp
external_packages/catch/: CMakeLists.txt
external_packages/qhull/: CMakeLists.txt
external_packages/qhull/libqhullcpp/: usermem_r-cpp.cpp
scripts/: petsc.sh
tests/: CMakeLists.txt  box.cpp  cavity.sh  cavity2d.cpp  cavity2d.sh  cavity3d.cpp  dton.cpp  dton_one_part.cpp  dton_sphere.cpp  ellipsoid.cpp  force.cpp  laplacian.cpp  matMult.cpp  ntod_one_part.cpp  ntod_sphere.cpp  particle.cpp  preallocate.cpp  quaternion.cpp  script_test_interp.sh  sem.cpp  sem3d.cpp  stokes.cpp  stokes_analytic_2d.cpp  stokes_analytic_3d.cpp  superellipsoid_uniform.cpp  test_interp.cpp  velocity.cpp
tests/Q2/: dton_one_part.cpp  dton_one_part.sh  dton_two_parts.cpp  dton_two_parts.sh
tests/cmake/: test.cpp
