cmake_minimum_required(VERSION 3.0)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/" ${CMAKE_MODULE_PATH})

include_directories(../cafes)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

FIND_PACKAGE(PETSc)
FIND_PACKAGE(MPI)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE (${VTK_USE_FILE})
include_directories(${PETSC_INCLUDE_CONF} ${PETSC_INCLUDE_DIR} ${MPI_INCLUDE_PATH})

ADD_EXECUTABLE(force force.cpp)
#ADD_EXECUTABLE(velocity velocity.cpp)
ADD_EXECUTABLE(ellipsoid ellipsoid.cpp)
ADD_EXECUTABLE(particle particle.cpp)
ADD_EXECUTABLE(box box.cpp)
ADD_EXECUTABLE(sem sem.cpp)
TARGET_LINK_LIBRARIES(sem ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(matMult matMult.cpp)
#TARGET_LINK_LIBRARIES(matMult ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

ADD_EXECUTABLE(stokes stokes.cpp)
TARGET_LINK_LIBRARIES(stokes ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})
