#ADD_EXECUTABLE(force force.cpp)
##ADD_EXECUTABLE(velocity velocity.cpp)
#ADD_EXECUTABLE(ellipsoid ellipsoid.cpp)
#ADD_EXECUTABLE(particle particle.cpp)
#ADD_EXECUTABLE(box box.cpp)
#ADD_EXECUTABLE(quaternion quaternion.cpp)

#ADD_EXECUTABLE(superellipsoid superellipsoid_uniform.cpp)
#TARGET_LINK_LIBRARIES(superellipsoid libqhullcpp libqhullr ${HDF5_hdf5_LIBRARY_RELEASE})

# ADD_EXECUTABLE(sem sem.cpp)
# TARGET_LINK_LIBRARIES(sem ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

# ADD_EXECUTABLE(preallocate preallocate.cpp)
# TARGET_LINK_LIBRARIES(preallocate ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(particle_operator particle_operator.cpp)
#TARGET_LINK_LIBRARIES(particle_operator ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(dton dton.cpp)
#TARGET_LINK_LIBRARIES(dton ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(dton_sphere dton_sphere.cpp)
#TARGET_LINK_LIBRARIES(dton_sphere ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(ntod_sphere ntod_sphere.cpp)
#TARGET_LINK_LIBRARIES(ntod_sphere ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(ntod_one_part ntod_one_part.cpp)
#TARGET_LINK_LIBRARIES(ntod_one_part ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(dton_one_part dton_one_part.cpp)
#TARGET_LINK_LIBRARIES(dton_one_part ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(sem3d sem3d.cpp)
#TARGET_LINK_LIBRARIES(sem3d ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(matMult matMult.cpp)
#TARGET_LINK_LIBRARIES(matMult ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(stokes stokes.cpp)
#TARGET_LINK_LIBRARIES(stokes ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(laplacian laplacian.cpp)
#TARGET_LINK_LIBRARIES(laplacian ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(cavity2d cavity2d.cpp)
#TARGET_LINK_LIBRARIES(cavity2d ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(cavity3d cavity3d.cpp)
#TARGET_LINK_LIBRARIES(cavity3d ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(stokes_analytic_3d stokes_analytic_3d.cpp)
#TARGET_LINK_LIBRARIES(stokes_analytic_3d ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

# ADD_EXECUTABLE(stokes_analytic_2d stokes_analytic_2d.cpp)
# TARGET_LINK_LIBRARIES(stokes_analytic_2d ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(nested_loop nested_loop.cpp)
#TARGET_LINK_LIBRARIES(nested_loop ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(mpi_composite mpi_composite.cpp)
#TARGET_LINK_LIBRARIES(mpi_composite ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

#ADD_EXECUTABLE(rvalue_test rvalue_test)

ADD_EXECUTABLE(test_interp test_interp.cpp)
TARGET_LINK_LIBRARIES(test_interp ${PETSC_LIBRARIES} ${MPI_LIBRARIES} ${VTK_LIBRARIES})

